# memex

./: .gitignore  CITATION.cff  CLAUDE.md  README.md  pyproject.toml  pytest.ini
.superpowers/brainstorm/806897-1773465832/: .server-stopped  theme-mode.html  visual-direction.html
docs/plans/: 2026-02-16-memex-design.md  2026-02-16-memex-phase1-plan.md  2026-02-22-html-spa-export-design.md  2026-02-22-html-spa-export.md  2026-02-24-scripts-and-redaction-design.md
docs/superpowers/plans/: 2026-03-14-html-export-redesign.md  2026-04-09-marginalia.md
docs/superpowers/specs/: 2026-03-14-html-export-redesign-design.md  2026-04-09-marginalia-design.md
llm_memex/: __init__.py  __main__.py  assets.py  cli.py  config.py  db.py  mcp.py
llm_memex/exporters/: arkiv_export.py  html.py  html_template.py  json_export.py  markdown.py
llm_memex/importers/: _claude_code_common.py  anthropic.py  arkiv.py  claude_code.py  claude_code_full.py  gemini.py  openai.py
llm_memex/scripts/: __init__.py  enrich_trivial.py  redact.py
memex/: __init__.py  __main__.py  assets.py  cli.py  config.py  db.py  mcp.py  models.py  server.py
memex/exporters/: __init__.py  arkiv_export.py  html.py  html_template.py  json_export.py  markdown.py
memex/importers/: __init__.py  _claude_code_common.py  anthropic.py  claude_code.py  claude_code_full.py  gemini.py  openai.py
memex/scripts/: __init__.py  note.py  redact.py
memex/scripts/patterns/: api_keys.txt  pii.txt
scripts/: enrich_trivial.py
tests/llm_memex/: test_arkiv_roundtrip.py  test_assets.py  test_cli.py  test_config.py  test_db.py  test_exporters.py  test_graph.py  test_html_export.py  test_importers.py  test_integration.py  test_mcp.py  test_models.py  test_notes.py  test_redact.py  test_scripts.py
tests/memex/: conftest.py  test_assets.py  test_cli.py  test_config.py  test_db.py  test_exporters.py  test_graph.py  test_html_export.py  test_importers.py  test_integration.py  test_mcp.py  test_models.py  test_notes.py  test_redact.py  test_scripts.py  test_server.py
