[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memex"
version = "0.1.0"
description = "Personal conversation knowledge base"
requires-python = ">=3.10"
dependencies = [
    "fastmcp<3",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "pytest-asyncio"]

[project.scripts]
memex = "memex.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests/memex"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["memex*"]

[tool.setuptools.package-data]
"memex.scripts" = ["patterns/*.txt"]
